I made changes to the contact page and added google maps

--- a/about.html
+++ b/about.html
@@ -493,11 +493,11 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>UpConstruction</h3>
+              <h3>BBM Construction</h3>
               <p>
                 Long Nose, Knoppieslaagte<br>
                 385-jr, Centurion, 0157<br><br>
-                <strong>Cell:</strong> 082 878 3816<br>
+                <strong>Cell:</strong> +27 82 878 3816<br>
                 <strong>Tell</strong>011 4645388<br>
                 <strong>Email:</strong> info@bbmconstruction.co.za<br>
               </p>
@@ -505,7 +505,7 @@
           </div><!-- End footer info column-->
 
           <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Links</h4>
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">About us</a></li>
