--- a/index.html
+++ b/index.html
@@ -444,31 +444,24 @@
                                 Long Nose, Knoppieslaagte<br>
                                 385-jr, Centurion, 0157<br>
                                 NCCN CENTER<br><br>
-                                <strong>Cell:</strong> 082 878 3816<br>
+                                <strong>Cell:</strong> +27 82 878 3816<br>
                                 <strong>Tell</strong>011 4645388<br>
                                 <strong>Email:</strong> info@bbmconstruction.co.za<br>
                             </p>
                             <div class="social-links d-flex mt-3">
-                                <a href="#" class="d-flex align-items-center justify-content-center"><i
-                                        class="bi bi-twitter"></i></a>
-                                <a href="#" class="d-flex align-items-center justify-content-center"><i
-                                        class="bi bi-facebook"></i></a>
-                                <a href="#" class="d-flex align-items-center justify-content-center"><i
-                                        class="bi bi-instagram"></i></a>
-                                <a href="#" class="d-flex align-items-center justify-content-center"><i
-                                        class="bi bi-linkedin"></i></a>
+                                
                             </div>
                         </div>
-                    </div><!-- End footer info column-->
+                    </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
-                        <h4>Useful Links</h4>
+                        <h4>Links</h4>
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">About us</a></li>
                             <li><a href="#">Services</a></li>
                         </ul>
-                    </div><!-- End footer links column-->
+                    </div>
 
                 </div>
             </div>
