--- a/services.html
+++ b/services.html
@@ -240,7 +240,7 @@
               <p>
                 Long Nose, Knoppieslaagte<br>
                 385-jr, Centurion, 0157<br><br>
-                <strong>Cell:</strong> 082 878 3816<br>
+                <strong>Cell:</strong> +27 82 878 3816<br>
                 <strong>Tell</strong>011 4645388<br>
                 <strong>Email:</strong> info@bbmconstruction.co.za<br>
               </p>
@@ -249,7 +249,7 @@
           </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Links</h4>
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">About us</a></li>
