--- a/projects.html
+++ b/projects.html
@@ -262,9 +262,9 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="services.html">Services</a></li>
             </ul>
           </div>
 
