--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
       </div>
     </section>
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -223,7 +223,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
 
   </main><!-- End #main -->
 
