I changed the image in the construction section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div class="card-item">
                             <div class="row">
                                 <div class="col-xl-5">
-                                    <div class="card-bg" style="background-image: url(assets/img/constructions-3.jpg);">
+                                    <div class="card-bg" style="background-image: url(assets/img1/project0.jpg);">
                                     </div>
                                 </div>
                                 <div class="col-xl-7 d-flex align-items-center">
